# aliyun_oss_rust_sdk

./: Cargo.toml  LICENSE  README.md
http_client/: Cargo.toml
http_client/src/: http_client.rs  http_errors.rs  http_request.rs  http_response.rs  lib.rs
http_client/src/default/: default_reqwest.rs  mod.rs
http_client/src/reqwest/: reqwest.rs
http_client/tests/: example.rs
src/: api.rs  auth.rs  lib.rs  oss.rs  statics.rs
src/api/: mod.rs
src/api/bucket/: get_bucket.rs  mod.rs  put_bucket.rs
src/api/object/: delete_object.rs  get_object.rs  head_object.rs  mod.rs  put_object.rs
src/http_client/: errors.rs  mod.rs  requests.rs  responses.rs  sign_and_dispatch.rs  signed_requests.rs  stream.rs
src/http_client/default_client/: reqwest.rs
src/types/: errors.rs  mod.rs  payload.rs  regions.rs  request.rs  response.rs  schema.rs  stream.rs
src/types/options/: get_object.rs  head_object.rs  mod.rs  put_object.rs
src/types/options/bucket_operations/: get_bucket.rs  mod.rs  put.rs
src/types/options/object_operations/: head.rs  mod.rs  put.rs
src/types/requests/: get_object.rs  mod.rs  put_bucket.rs
tests/: example.rs
