[package]
name = "oss_sdk"
version = "0.3.0"
authors = ["HuXingYu <huxingyu@shimo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

http_client = { path="./http_client" }

once_cell = "1.7"

hyper = { version="0.14", features=["stream"] }

url = "2.2"

reqwest = { version="0.11", features=["stream", "rustls-tls"] }

base64 = "0.13"

chrono = "0.4"

rust-crypto = "^0.2"

log = "0.4.6"

async-trait = "0.1"

bytes = "1.0"

derive_more = "0.99"

tokio = { version="1.5", features=["macros", "rt-multi-thread"] }

pin-project = "1"

futures = "0.3"

# xml-rs = "0.8"

headers_serializer = { version="0.1", git="https://github.com/huxy11/headers_serializer.git" }
