[package]
name = "oss_sdk"
version = "0.3.0"
authors = ["HuXingYu <huxingyu@shimo.com>"]
edition = "2018"

[dependencies]

http_client = { path = "./http_client" }

hyper = { version = "0.14", features = ["stream"] }

url = "2.2"

base64 = "0.13"

chrono = "0.4"

rust-crypto = "^0.2"

log = "0.4.6"

async-trait = "0.1"

bytes = "1.0"

pin-project = "1.0"

futures = "0.3"

headers_serializer = { version = "0.1", git = "https://github.com/huxy11/headers_serializer.git" }

tokio = { version = "1.5", features = ["rt-multi-thread"] }

[dev-dependencies]

tokio = { version = "1.5", features = ["macros"] }
