[package]
name = "http_client"
version = "0.1.0"
authors = ["huxingyu <huxingyu@shimo.im>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

hyper = { version="0.14", features=["stream"] }

url = "2.2"

bytes = "1.0"

futures = "0.3"

serde = "1.0"

reqwest = { version="0.11", features=["stream", "rustls-tls"] }

async-trait = "0.1"

[dev-dependencies]
tokio = { version="1.8", features=["macros"] }
